bluejay-parser/tests/snapshots/executable_document_integration_test__error@empty_variables_definition.graphql.snap
---
source: bluejay-parser/tests/executable_document_integration_test.rs
expression: formatted_errors
input_file: bluejay-parser/tests/test_data/executable_document/error/empty_variables_definition.graphql
---
Error: Parse error
   ╭─[<unknown>:1:13]
   │
 1 │ query Query() {
   │             ┬  
   │             ╰── Expected to find: $
───╯

